[tool.black]
line-length = 99
target-version = ["py310"]
exclude = '''
/(
    \.git|.venv
)/
'''

[tool.isort]
profile = "black"
float_to_top = true
skip_glob = ".venv"

[tool.poetry]
name = "<project-name>"
version = "0.1.0"
description = "<project-description>"
repository = "https://github.com/expobrain/<project-name>"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "<project-name>" }]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^22.1"
isort = "^5.10.1"
mypy = "^0.961"
pdbpp = "^0.10.3"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
flake8 = "^4.0.1"
pyupgrade = "^2.31.1"
flake8-bugbear = "^22.6.22"
pytest-icdiff = "^0.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
exclude = ".venv/"
check_untyped_defs = true
disallow_incomplete_defs = true
warn_unused_configs = true
warn_unused_ignores = true
disallow_subclassing_any = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true

# [[tool.mypy.overrides]]
# module = "google.auth.credentials"
# ignore_missing_imports = true
