[tool.poetry]
name = "python-loki-client-example"
version = "0.1.0"
description = "Python client example for Grafana Loki"
repository = "https://github.com/expobrain/python-loki-client/tree/main/example"
authors = ["Daniele Esposti <daniele.esposti@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.7,<4"
python-loki-client = { path = "..", develop = true }
click = "^8.1.3"

[tool.poetry.dev-dependencies]
mypy = "^0.990"
black = "^22.10"
autoflake = "^1.7"
pyupgrade = "^3.2.2"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
